Correcting view of long toast messages on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -444,7 +444,7 @@ body {
 
 .message-container {
     position: fixed;
-    max-width: 300px;
+    max-width: fit-content;
     top: 150px;
     z-index: 99999;
     left: 35px;
